<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/login_parent_ll"
    android:theme="@style/LoginBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".Login">


        <!-- bellow widget and accompanying code inserts an ad-->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_ll"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/band_up_login_logo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50px"
                app:srcCompat="@drawable/ic_band_up_logo" />

            <LinearLayout
                android:id="@+id/login_ll_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <LinearLayout
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusLeft="@id/etUsername"
                        android:nextFocusUp="@id/etUsername" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/login_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:onClick="onClickSignIn"
                    android:text="@string/login_sign_in" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="onClickSignUp"
                    android:text="@string/login_sign_up"
                    android:textAllCaps="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50px"
                    android:orientation="vertical"
                    android:layout_weight="2.60">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/soundcloud_big"
                        android:id="@+id/login_button_soundcloud"
                        android:onClick="onClickSoundCloud"/>

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/login_button_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>