...
    <string name="login_username">Email</string>

    <!-- The hint displayed on the password text field. -->
    <string name="login_password">Password</string>

    <!-- An error that appears when a user hasn't entered his/her email. -->
    <string name="login_username_validation">Please enter your email</string>

    <!-- An error that appears when a user hasn't entered his/her password. -->
    <string name="login_password_validation">Please enter your password</string>

    <!-- The log in button -->
    <string name="login_sign_in">Log in</string>

    <!-- A button that allows you to open another screen where you register for a new account -->
    <string name="login_sign_up">Do not have an account? Sign up here.</string>
...
