<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/bandUpBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/setup_get_started"
                    android:id="@+id/txt_title_get_started"
                    android:textColor="@color/bandUpYellow"
                    android:layout_gravity="center_horizontal" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="end"
                    android:textSize="13sp"
                    android:text="1/2"
                    android:id="@+id/txt_title_progress"
                    android:textColor="@color/bandUpYellow" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/setup_instruments_hint"
                android:id="@+id/txt_title_hint"
                android:textColor="@color/bandUpYellow"/>
        </LinearLayout>


        <GridView
            android:id="@+id/instrumentGridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:verticalSpacing="1dp"
            android:layout_weight="1"
            android:fadingEdge="vertical"
            android:layout_marginBottom="5dp"
            android:fadeScrollbars="false"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_instruments_next"
            android:id="@+id/btnNext"
            android:layout_gravity="right"
            android:onClick="onClickNext"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>

        <include layout="@layout/ads"/>
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instrumentProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNoInstruments"
        android:text="@string/setup_no_instruments"
        android:visibility="invisible"
        android:textSize="20sp"
        android:textColor="@color/bandUpYellow"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>